[package]
name = "rust-aws-sdk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
aws-config = { version= "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.4.0"

